fixup! squash! Bug 27476: Implement about:torconnect captive portal within Tor Browser
Bug 40871: increased the width of #connectPageContainer

--- a/browser/components/torconnect/content/aboutTorConnect.css
+++ b/browser/components/torconnect/content/aboutTorConnect.css
@@ -196,7 +196,8 @@ input[type="checkbox"]:not(:disabled):active:checked {
 
 #connectPageContainer {
   margin-top: 10vh;
-  width: 50%;
+  width: 100%;
+  max-width: 45em;
 }
 
 #quickstartCheckbox, #quickstartCheckboxLabel {
